Correction of edits